--- a/src/main/resources/templates/Frontend/Main/Payment.mustache
+++ b/src/main/resources/templates/Frontend/Main/Payment.mustache
@@ -39,7 +39,7 @@
             text-overflow: ellipsis // This is where the magic happens
         }
     </style>
-    
+
     <link href="/css/User/userstyles.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
@@ -59,51 +59,48 @@
 
 
         </div>
-<<<<<<< HEAD
-        </nav>
-    
+    </nav>
+
 <div id="layoutSidenav">
-    <!--<div id="layoutSidenav_nav">-->
-        <!--<nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">-->
-               <!--<div class="sb-sidenav-menu">-->
+    <div id="layoutSidenav_nav">
+        <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+               <div class="sb-sidenav-menu">
 
-                <!--<div class="profile-userpic">-->
-                    <!--<img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; margin-top: 20px; ">-->
-                <!--</div>-->
-                <!--<div class="profile-usertitle">-->
-                    <!--<div class="profile-usertitle-name">-->
-                        <!--{{userData.firstName}} {{userData.lastName}}-->
-                    <!--</div>-->
-                    <!--<div class="profile-userbuttons">-->
-                    <!--</div>-->
-                    <!--<div style="background-color:white; width:100%; height:0.3em; margin-top:50px;">-->
-                     <!---->
-                    <!--</div>-->
-                    <!--<div class="nav">-->
-                        <!--<a class="nav-link" href="http://localhost:8888/User">-->
-                            <!--<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
-                            <!--Dashboard-->
-                        <!--</a>-->
-                        <!--<a class="nav-link" href="http://localhost:8888/User/Checkout/">-->
-                            <!--<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
-                            <!--Cart-->
-                        <!--</a>-->
-                        <!--<a class="nav-link" href="http://localhost:8888/User/Purchases">-->
-                            <!--<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
-                            <!--Purchased images-->
-                        <!--</a>-->
-                    <!--</div>-->
-                <!--</div>-->
-               <!--<div class="sb-sidenav-footer">-->
-                      <!--<p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog" style="margin-right:5px"></i>Settings</p>-->
+                <div class="profile-userpic">
+                    <img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; margin-top: 20px; ">
+                </div>
+                <div class="profile-usertitle">
+                    <div class="profile-usertitle-name">
+                        {{userData.firstName}} {{userData.lastName}}
+                    </div>
+                    <div class="profile-userbuttons">
+                    </div>
+                    <div style="background-color:white; width:100%; height:0.3em; margin-top:50px;">
 
-                    <!--</div>-->
+                    </div>
+                    <div class="nav">
+                        <a class="nav-link" href="http://localhost:8888/User">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Dashboard
+                        </a>
+                        <a class="nav-link" href="http://localhost:8888/User/Checkout/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Cart
+                        </a>
+                        <a class="nav-link" href="http://localhost:8888/User/Purchases">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Purchased images
+                        </a>
+                    </div>
+                </div>
+               <div class="sb-sidenav-footer">
+                      <p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog" style="margin-right:5px"></i>Settings</p>
 
-            <!--</div>-->
-        <!--</nav>-->
-    <!--</div>-->
-=======
+                    </div>
 
+            </div>
+        </nav>
+    </div>
         <div class="logo">
             <a href="http://localhost:8888/Index/"><img style="float: left; margin-right: 1%;" src="/img/pikto.png"
                                                         width="100"/></a>
@@ -116,13 +113,10 @@
                 <li><a href="http://localhost:8888/Index/Category/2">Stockphotos</a></li>
                 <li><a href="http://localhost:8888/Index/Category/3">Posters</a></li>
 
-             
+
             </ul>
         </div>
     </nav>
- 
-
->>>>>>> bb5162307e03cc395a938ed3761a9d3923ca7ad6
     <div id="layoutSidenav_content">
 
         <main>
@@ -307,7 +301,7 @@
             </div>
 
    <div style="background-color:black; width:100%; height:0.7em;">
-                     
+
                     </div>
                <div class="modal-header">
                 <h5 class="modal-title">Change password</h5>
@@ -333,7 +327,7 @@
                         <div class="col-8">
                             <input id="Firstname" name="newpassword" type="password" class="form-control">
                         </div>
-                    </div>      
+                    </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Save changes</button>
                     </div>
@@ -346,7 +340,7 @@
 
 
 </div>
-   
+
 
 
 
